# odyssey

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  messages.rs  movement.rs  region.rs
