[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.2"

bevy_renet = { workspace = true }
renet = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
shared = { path = "../shared" }
rand = { workspace = true }
